update-manager (1:0.87.13) hardy; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - only ask once about the sshd (LP: #156625)
  * DistUpgrade/removal_blacklist.cfg:
    - add "^postgresql-.*"to the removal blacklist

 --

update-manager (1:0.87.12) hardy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix display of non-ascii chars
    - improve editing capabilities of the terminal (should be 
      fine with the readline fontend now)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Mar 2008 22:01:36 +0100

update-manager (1:0.87.11) hardy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - when upgrading without network and with a empty sources.list,
      do not ask to add network sources
  * DistUpgrade/DistUpgradeCache.py:
    - do not crash if lookupRecords() failed (LP: #199482)
  * UpdateManager/UpdateManager.py:
    - use absolute path when calling gksu (LP: #194166),
      Thanks to Mihai Varzaru and James Westby
  * data/update-manager.desktop.in:
    - improve consistency with the rest of gnome (LP: #150205)
  * DistUpgrade/DistUpgradeViewKDE.py:
    - do no longer use konsole during upgrades but use a dumb
      terminal instead that only supports basic editing
    - log terminal activity to /var/log/dist-upgrade/term.log

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Mar 2008 09:40:49 +0100

update-manager (1:0.87.10) hardy; urgency=low

  * remove code duplication in the confirmChanges() code and make the
    warning more readable (LP: #188724)
  * DistUpgrade/DistUpgradeController.py:
    - when adding prerequists, ensure that no duplicated lines are
      added, plus add test for this (thanks to Kolbjørn Barmen)
    - honor APT::Get::AllowUnauthenticated (thanks to Kolbjørn 
      Barmen)
  * DistUpgrade/cdromupgrade:
    - updated to hardy
    - fix bug in path handling (LP: #155833)
  * DistUpgrade/prerequists-sources.list:
    - remove cruft
