@@ -2,6 +2,11 @@ update-manager (1:0.87.13) hardy; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - only ask once about the sshd (LP: #156625)
+  * DistUpgrade/DistUpgradeCache.py:
+    - add hardyQuirks handler to deal with
+      gtranslator/gvfs issues (thanks to Daniel Holbach)
+  * DistUpgrade/DistUpgrade.cfg:
+    - add "ksplash-engine-moodin" to ForcedObsoletes
   * DistUpgrade/removal_blacklist.cfg:
     - add "^postgresql-.*"to the removal blacklist
 
